<resources>
    <string name="app_name">DIM Turnos</string>
    <string name="loginDNI">DNI Paciente</string>
    <string name="loginPass">Contraseña</string>
    <string name="loginBtn">Iniciar Sesión</string>
    <string name="title_activity_main">Clinica DIM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="navTurnos">Mis Turnos</string>
    <string name="navExams">Nuevo Turno</string>
    <string name="navConfig">Configuración</string>
    <string name="navUserOpt">Datos de Usuario</string>
    <string name="navEndSession">Cerrar Sesión</string>
    <string name="navLocations">Centros de Atención</string>
    <string name="selectEspecialidad">Seleccione la especialidad:</string>
    <string name="auth">Autenticando...</string>
    <string name="loading">Cargando datos...</string>
    <string name="medico">Médico:</string>
    <string name="especialidad">Especialidad:</string>
    <string name="fechahora">Fecha y hora:</string>
    <string name="centro">Centro:</string>
    <string name="consultorio">Consultorio:</string>
    <string name="cobertura">Cobertura:</string>
    <string name="preparacion">Preparación:</string>
    <string name="practicas">Prácticas:</string>
    <string name="cancel">Cancelar Turno</string>
    <string name="addtocalendar">Agregar a calendario</string>
    <string name="selectEsp">Seleccione la especialidad:</string>
    <string name="selectMed">Seleccione el médico:</string>
    <string name="nuevaConsulta">Confirmar el turno</string>
    <string name="cancelarTurno">¿Cancelar el turno?</string>
    <string name="olvidoContraseña"><u>Olvidó su contraseña?</u></string>
    <string name="navOpcionesTitle">Opciones de Usuario</string>
    <string name="navTurnosTitle">Turnos</string>

    <string-array name="especialidadesArray">
        <item>Clínica Médica</item>
        <item>Dermatología</item>
        <item>Fisioterapia</item>
        <item>Odontología</item>
        <item>Psiquiatría</item>
        <item>Nutrición</item>
        <item>Oftalmología</item>
        <item>Urología</item>
    </string-array>
    <string-array name="sexoArray">
        <item>M</item>
        <item>F</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
