<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainlayout"
    android:orientation="vertical">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/background"
        android:layout_weight="1">
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_login"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true">

    </ImageView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewEntry">

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="mobile.mads.turnosdim.EntryActivity"
            android:background="#00ffffff">

            <EditText
                android:layout_width="338dp"
                android:layout_height="39dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/loginDNI"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="@+id/activity_entry"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="@+id/activity_entry"
                android:layout_marginLeft="16dp"
                android:hint="@string/loginDNI"
                android:layout_marginTop="128dp"
                app:layout_constraintTop_toTopOf="@+id/activity_entry"
                />

            <EditText
                android:layout_width="338dp"
                android:layout_height="41dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginPassword"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="@+id/activity_entry"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="@+id/activity_entry"
                android:layout_marginLeft="16dp"
                android:hint="@string/loginPass"
                app:layout_constraintTop_toBottomOf="@+id/loginDNI"
                android:layout_marginTop="32dp" />

            <Button
                android:text="@string/loginBtn"
                android:background="@drawable/background_botonnaranja"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/loginBtn"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="@+id/activity_entry"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="@+id/activity_entry"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/loginPassword"
               />

            <Button
                android:text="Registrarse"
                android:background="@drawable/background_botonnaranja"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/newUserBtn"
                app:layout_constraintRight_toRightOf="@+id/loginBtn"
                app:layout_constraintLeft_toLeftOf="@+id/loginBtn"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn"
                 />

            <TextView
                android:text="@string/olvidoContraseña"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="#000000"
                android:id="@+id/resetPwdBtn"
                app:layout_constraintRight_toRightOf="@+id/loginBtn"
                app:layout_constraintLeft_toLeftOf="@+id/loginBtn"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/newUserBtn"
                android:clickable="true"/>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    </RelativeLayout>
    <TextView
        android:text="Usuarios Registrados"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#000000"
        android:id="@+id/registeredUser"
        android:background="@color/grisClaro"
        android:clickable="true"/>
</LinearLayout>