<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle_turno_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile.mads.turnosdim.DetalleTurno">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/activity_detalle_turno_main"
        android:layout_marginTop="10dp"
        android:id="@+id/scrollDetalleTurno">
        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_detalle_turno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="mobile.mads.turnosdim.DetalleTurno"
            app:layout_constraintTop_toTopOf="@id/scrollDetalleTurno"
            android:layout_marginTop="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detalleTurnoMedico"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@id/activity_detalle_turno"
                android:layout_marginTop="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="@id/activity_detalle_turno"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="@id/activity_detalle_turno"
                android:layout_marginRight="16dp"
                >
                <TextView
                    android:text="@string/medico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtMedico"
                    android:layout_alignParentLeft="true"
                    android:maxLines="1"
                    />
                <TextView
                    android:text="texto s ddasd asas asdasd sad asd asd asd asd as das dass das dco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentMedico"
                    android:layout_toRightOf="@+id/txtMedico"
                    android:paddingLeft="5dp"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detalleTurnoEspecialidad"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/detalleTurnoMedico"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="@id/activity_detalle_turno"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="@id/activity_detalle_turno"
                android:layout_marginRight="16dp">
                <TextView
                    android:text="@string/especialidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtEspecialidad"
                    android:layout_alignParentLeft="true"
                    android:maxLines="1"/>
                <TextView
                    android:text="texto de la especialiasdasda fasdfasfsda fadf a sddad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentEspecialidad"
                    android:layout_toRightOf="@+id/txtEspecialidad"
                    android:paddingLeft="5dp"/>
            </RelativeLayout>

            <!--


                <TextView
                    android:text="@string/fechahora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtFecha"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtEspecialidad" />

                <TextView
                    android:text="@string/centro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCentro"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

                <TextView
                    android:text="@string/consultorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtConsultorio"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtCentro" />

                <TextView
                    android:text="@string/cobertura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCobertura"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtConsultorio" />

                <TextView
                    android:text="@string/preparacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPreparacion"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtCobertura" />

                <TextView
                    android:text="@string/practicas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPracticas"
                    android:layout_marginStart="16dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtPreparacion" />





                <TextView
                    android:text="texto fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentFecha"
                    android:layout_marginStart="136dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="136dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/contentEspecialidad" />

                <TextView
                    android:text="texto centro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentCentro"
                    android:layout_marginStart="136dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="136dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/contentFecha" />

                <TextView
                    android:text="texto consultorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentConsultorio"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/contentCentro"
                    android:layout_marginStart="136dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="136dp" />

                <TextView
                    android:text="texto cobertura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentCobertura"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/contentConsultorio"
                    android:layout_marginStart="136dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="136dp" />

                <TextView
                    android:text="texto preparacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/contentPreparacion"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/contentCobertura"
                    android:layout_marginStart="136dp"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="136dp" />

                <ExpandableListView
                    android:layout_width="191dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="136dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/contentPreparacion"
                    app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno"
                    android:layout_marginLeft="136dp" />-->
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <Button
        android:text="@string/addtocalendar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveCalendar"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_detalle_turno_main"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_detalle_turno_main"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_simple"
        android:textStyle="bold"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnDelete"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/activity_detalle_turno_main"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_detalle_turno_main"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/btnSaveCalendar"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.75"
        android:background="@drawable/button_simple"
        android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>
